--- a/stubby.yml
+++ b/stubby.yml
@@ -5,6 +5,7 @@ tls_authentication: GETDNS_AUTHENTICATION_REQUIRED
 tls_query_padding_blocksize: 256
 edns_client_subnet_private: 1
 idle_timeout: 10000
+dnssec_return_status: GETDNS_EXTENSION_TRUE
 listen_addresses:
   - 0.0.0.0
 upstream_recursive_servers:
